# Genie-TTS

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
.specify/specs/001-multilang-improvement/: spec.md
.specify/specs/002-segmenter-robustness/: plan.md  spec.md  tasks.md
Tutorial/English/: How to Do TTS Inference.py
runtime/: CMakeLists.txt
runtime/src/: T2SOnnxCPURuntime.cpp
src/genie_tts/: GetPhonesAndBert.py  Internal.py  ModelManager.py  Server.py  __init__.py  _internal.py
src/genie_tts/Audio/: ReferenceAudio.py
src/genie_tts/Chinese/: ChineseG2P.py  Split.py
src/genie_tts/Core/: Inference.py  Resources.py  TTSPlayer.py
src/genie_tts/Data/v2ProPlus/Models/: prompt_encoder_fp32.onnx  vits_fp32.onnx
src/genie_tts/G2P/: SymbolsV2.py
src/genie_tts/G2P/Chinese/: ChineseG2P.py  Erhua.py  ToneSandhi.py
src/genie_tts/G2P/Chinese/Normalization/: text_normlization.py
src/genie_tts/G2P/English/: EnglishG2P.py  Split.py
src/genie_tts/G2P/Japanese/: JapaneseG2P.py
src/genie_tts/GUI/: GUI.py  ServerManager.py
src/genie_tts/Utils/: LangDetector.py  Language.py  TextSplitter.py
test/: TestAll.py
tests/: test_get_phones_and_bert.py
tests/Audio/: test_reference_audio_cache.py
tests/Utils/: test_lang_detector.py
